Splitter window divider stylesheet added for Variables tab.

--- a/NewGeneUI/NewGene/CreateOutput/SelectVariables/newgeneselectvariables.ui
+++ b/NewGeneUI/NewGene/CreateOutput/SelectVariables/newgeneselectvariables.ui
@@ -19,6 +19,17 @@
    </property>
    <item row="0" column="0">
     <widget class="QSplitter" name="splitter">
+     <property name="styleSheet">
+      <string notr="true">/* from http://stackoverflow.com/a/6833364/368896 */
+QSplitter::handle {
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, 
+stop:0 rgba(255, 255, 255, 0), 
+stop:0.407273 rgba(200, 200, 200, 255), 
+stop:0.4825 rgba(101, 104, 113, 235), 
+stop:0.6 rgba(255, 255, 255, 0));
+    image: url(:/images/splitter.png);
+     }</string>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
