--- a/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
@@ -26,12 +26,20 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="styleSheet">
-      <string notr="true">QWidget {
-border-bottom: 6px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+      <string notr="true">
+QWidget {
+/*border-bottom: 6px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                  stop: 0 #d1d1d1,
                                  stop: 0.5 #d1d1d1,
                                  stop: 0.8 #7e7fff,
-                                 stop: 1 #3233ff);
+                                 stop: 1 #3233ff);*/
+border-bottom: 6px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 /* #b1b1ff, */ /* #6565ff, */ /* strong-&gt; #0000cd, */ #4d4eff,
+                                 /*stop: 0.3 #cbcbff,
+                                 stop: 0.4 #cbcbff,
+                                 stop: 0.7 #fde0d3*/
+                                 stop: 1 /* strong-&gt; #ff450c */ #ff9372
+                                 );
 }
 
 QTabBar::tab:selected {
@@ -42,6 +50,10 @@ padding-right: 10px;
 border-bottom: 1px solid #7e7fff;
 border-top: 1px solid #a0a0a0;
 margin-bottom: 6px;
+border-bottom-left-radius: 0px;
+border-bottom-right-radius: 0px;
+padding-top: 0px;
+padding-bottom: 0px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                  stop: 0 #ededed, stop: 0.9 #9898ff,
                                  stop: 1 #7e7fff);
@@ -55,6 +67,10 @@ padding-right: 10px;
 border-bottom: 1px solid #7e7fff;
 border-top: 1px solid #a0a0a0;
 margin-bottom: 6px;
+border-bottom-left-radius: 0px;
+border-bottom-right-radius: 0px;
+padding-top: 0px;
+padding-bottom: 0px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                  stop: 0 #e0e0e0, stop: 0.4 #dbdbdb,
                                  stop: 0.5 #d3d3d3, stop: 1.0 #cfcfcf);
