--- a/NewGeneUI/NewGene/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/newgenemainwindow.ui
@@ -46,12 +46,12 @@ padding-left: 10px;
 border-right: 1px solid #1c1515;
 padding-right: 10px;
 border-bottom: 1px solid #7e7fff;
-border-top: 1px solid #a0a0a0;
+border-top: 0px solid #a0a0a0;
 margin-bottom: 0px;
 border-bottom-left-radius: 8px;
 border-bottom-right-radius: 8px;
-padding-top: 1px;
-padding-bottom: 2px;
+padding-top: 6px;
+padding-bottom: 6px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                  stop: 0 #ff450c,
                                  stop: 0.05 #f98a74,
@@ -66,15 +66,15 @@ padding-left: 10px;
 border-right: 1px solid #1c1515;
 padding-right: 10px;
 border-bottom: 1px solid #7e7fff;
-border-top: 1px solid #a0a0a0;
-margin-bottom: 2px;
+border-top: 0px solid #a0a0a0;
+margin-bottom: 4px;
 border-bottom-left-radius: 8px;
 border-bottom-right-radius: 8px;
 padding-top: 1px;
-padding-bottom: 2px;
+padding-bottom: 1px;
 background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 /* #d3d3d3, */ #5354dd,
-                                 stop: 0.3 /* #cfcfcf, */ #b1b1ff,
+                                 stop: 0 /* #5354dd, */ #b1b1ff,
+                                 stop: 0.3 /* #b1b1ff, */ #c7c7c7
                                  stop: 0.6 #c7c7c7,
                                  stop: 1.0 #a1a1a1);
 }
@@ -97,10 +97,18 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       </property>
       <widget class="QWidget" name="tabHome">
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">QWidget {
+border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #9394ea,
+                                 stop: 0.1 #4d4eff,
+                                 stop: 0.15 #5354dd,
+                                 stop: 1.0 #ff9372
+                                 );
+}
+</string>
        </property>
        <attribute name="title">
-        <string>Home</string>
+        <string> Home </string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout"/>
       </widget>
@@ -109,7 +117,7 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
         <string notr="true"/>
        </property>
        <attribute name="title">
-        <string>Create output dataset</string>
+        <string> Create output dataset </string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayoutOutput">
         <property name="margin">
@@ -122,10 +130,18 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       </widget>
       <widget class="QWidget" name="tabInput">
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">QWidget {
+border-bottom: 9px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #9394ea,
+                                 stop: 0.1 #4d4eff,
+                                 stop: 0.15 #5354dd,
+                                 stop: 1.0 #ff9372
+                                 );
+}
+</string>
        </property>
        <attribute name="title">
-        <string>Manage input dataset</string>
+        <string> Manage input dataset </string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3"/>
       </widget>
