--- a/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/CreateOutput/newgenecreateoutput.ui
@@ -87,13 +87,32 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
      <widget class="QWidget" name="tabSelectVariables">
       <property name="styleSheet">
        <string notr="true">QWidget {
-border-bottom: 3px solid #f9dac7;
+/* border-bottom: 3px solid #f9dac7; */
+border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #ededed,
+                                 stop: 1.0 #f9dac7
+                                 );
 }</string>
       </property>
       <attribute name="title">
        <string> Select variables </string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>3</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="0" column="0">
         <widget class="NewGeneSelectVariables" name="widget" native="true">
          <property name="styleSheet">
@@ -122,13 +141,23 @@ border-bottom: 0px;;
      <widget class="QWidget" name="tabColumnOrder">
       <property name="styleSheet">
        <string notr="true">QWidget {
-border-bottom: 3px solid #f9dac7;
+/* border-bottom: 3px solid #f9dac7; */
+border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #ededed,
+                                 stop: 1.0 #f9dac7
+                                 );
 }</string>
       </property>
       <attribute name="title">
        <string> Set column order </string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <item row="0" column="0">
         <widget class="QWidget" name="widget_2" native="true">
          <property name="styleSheet">
@@ -143,7 +172,11 @@ border-bottom: 0px;
      <widget class="QWidget" name="tabOutputDestination">
       <property name="styleSheet">
        <string notr="true">QWidget {
-border-bottom: 3px solid #f9dac7;
+/* border-bottom: 3px solid #f9dac7; */
+border-bottom: 5px solid qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #ededed,
+                                 stop: 1.0 #f9dac7
+                                 );
 }</string>
       </property>
       <attribute name="title">
