--- a/NewGeneUI/NewGene/CreateOutput/SelectVariables/Variables/newgenevariables.ui
+++ b/NewGeneUI/NewGene/CreateOutput/SelectVariables/Variables/newgenevariables.ui
@@ -59,6 +59,15 @@
       <attribute name="label">
        <string>Country Variables</string>
       </attribute>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QListView" name="listView">
+         <property name="selectionMode">
+          <enum>QAbstractItemView::MultiSelection</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="page_2">
       <property name="geometry">
@@ -66,7 +75,7 @@
         <x>0</x>
         <y>0</y>
         <width>596</width>
-        <height>366</height>
+        <height>357</height>
        </rect>
       </property>
       <attribute name="label">
@@ -79,7 +88,7 @@
         <x>0</x>
         <y>0</y>
         <width>596</width>
-        <height>366</height>
+        <height>357</height>
        </rect>
       </property>
       <attribute name="label">
@@ -92,7 +101,7 @@
         <x>0</x>
         <y>0</y>
         <width>596</width>
-        <height>366</height>
+        <height>357</height>
        </rect>
       </property>
       <attribute name="label">
@@ -105,7 +114,7 @@
         <x>0</x>
         <y>0</y>
         <width>596</width>
-        <height>366</height>
+        <height>357</height>
        </rect>
       </property>
       <attribute name="label">
